--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "node_modules/.bin/webpack -w",
-    "test": "node_modules/.bin/webpack-dev-server --inline --hot",
+    "test": "node_modules/.bin/webpack-dev-server --inline --hot --host 0.0.0.0",
     "server": "node_modules/.bin/babel-node server.js"
   },
   "repository": {
@@ -36,6 +36,8 @@
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
     "express": "^4.14.0",
+    "express-session": "^1.14.2",
+    "express-ws": "^2.0.0",
     "open-browser-webpack-plugin": "0.0.3",
     "react-hot-loader": "^3.0.0-beta.6",
     "redux-devtools": "^3.3.2",
