--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "node_modules/.bin/webpack -w",
-    "test": "node_modules/.bin/webpack-dev-server --inline --hot --host 0.0.0.0",
-    "server": "node_modules/.bin/babel-node server.js"
+    "build": "webpack -w",
+    "start": "webpack-dev-server --inline --hot --host 0.0.0.0",
+    "server": "babel-node server.js"
   },
   "repository": {
     "type": "git",
@@ -20,14 +20,14 @@
   "homepage": "https://github.com/YuKaiyang/reservation#readme",
   "private": true,
   "dependencies": {
-    "isomorphic-fetch": "^2.2.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
     "redux": "^3.6.0",
     "redux-act": "^1.1.0",
     "redux-form": "^6.4.3",
-    "redux-thunk": "^2.1.0"
+    "redux-thunk": "^2.1.0",
+    "whatwg-fetch": "^2.0.2"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
@@ -36,12 +36,13 @@
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
     "express": "^4.14.0",
-    "express-ws": "^2.0.0",
     "open-browser-webpack-plugin": "0.0.3",
     "react-hot-loader": "^3.0.0-beta.6",
     "redux-devtools": "^3.3.2",
     "redux-devtools-dock-monitor": "^1.1.1",
     "redux-devtools-log-monitor": "^1.2.0",
+    "socket.io": "^1.7.3",
+    "socket.io-client": "^1.7.3",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2"
   }
